# mailxx

./: CMakeLists.txt  LICENSE  README.md  README_zh.md  doxygen.conf.in  mailxx.pc.in
cmake/: mailxx-config.cmake.in
examples/: CMakeLists.txt  example_util.hpp  imap_async_example.cpp  imap_fetch_one.cpp  imap_folders.cpp  imap_remove_msg.cpp  imap_search.cpp  imap_stat.cpp  message.cpp  pop3_attachment.cpp  pop3_fetch_one.cpp  pop3_remove_msg.cpp  smtp_attachment.cpp  smtp_insecure_local_dev.cpp  smtp_multipart.cpp  smtp_simple_msg.cpp  smtp_starttls.cpp  smtp_utf8_qp_msg.cpp
include/: version.hpp.in
include/mailxx/: config.hpp  dialog.hpp  export.hpp  imap.hpp  import.hpp  mailxx.hpp  message.hpp  pool.hpp  pop3.hpp  smtp.hpp  throwing.hpp
include/mailxx/codec/: base64.hpp  base64_stream.hpp  binary.hpp  bit7.hpp  bit8.hpp  codec.hpp  percent.hpp  q_codec.hpp  quoted_printable.hpp
include/mailxx/detail/: append.hpp  ascii.hpp  asio_decl.hpp  asio_error.hpp  async_mutex.hpp  auth_policy.hpp  awaitable_traits.hpp  error_detail.hpp  exception_bridge.hpp  log.hpp  oauth2_retry.hpp  output_sink.hpp  reconnection.hpp  redact.hpp  regex.hpp  result.hpp  sanitize.hpp  sasl.hpp  timeout_config.hpp
include/mailxx/imap/: client.hpp  error.hpp  error_mapping.hpp  types.hpp  utf7.hpp
include/mailxx/mime/: attachment_source.hpp  mailboxes.hpp  message.hpp  mime.hpp  mime_impl.hpp
include/mailxx/net/: dialog.hpp  error_mapping.hpp  tls_error.hpp  tls_mode.hpp  tls_options.hpp  tls_trust_store.hpp  upgradable_stream.hpp
include/mailxx/oauth2/: token.hpp  token_source.hpp
include/mailxx/pool/: connection_pool.hpp  imap_pool.hpp  pool_config.hpp  rate_limiter.hpp  smtp_pool.hpp
include/mailxx/pop3/: client.hpp  error.hpp  error_mapping.hpp  types.hpp
include/mailxx/smtp/: client.hpp  error.hpp  error_mapping.hpp  types.hpp
include/mailxx/storage/: maildir.hpp  mbox.hpp
modules/: CMakeLists.txt  mailxx.codec.cppm  mailxx.cppm  mailxx.imap.cppm  mailxx.mime.cppm  mailxx.net.cppm  mailxx.pool.cppm  mailxx.pop3.cppm  mailxx.smtp.cppm
test/: CMakeLists.txt  test_auth_policy.cpp  test_base64_stream.cpp  test_error_detail.cpp  test_error_mapping.cpp  test_imap_append_build.cpp  test_imap_append_streaming.cpp  test_imap_auth_sasl.cpp  test_imap_parse.cpp  test_maildir.cpp  test_mbox.cpp  test_message.cpp  test_oauth2_retry.cpp  test_oauth2_token_source.cpp  test_pool_lease_drop_after_pool_destroy.cpp  test_pop3_reconnect_snapshot.cpp  test_redact.cpp  test_smtp_mail_from_params.cpp  test_smtp_streaming.cpp  test_tls_options_normalize.cpp
